# RepoMan

./: .clang-format  .deps  CMakeLists.txt  README.md
.github/workflows/: rollling_build.yml
src/: busystatedisabler.cpp  busystatedisabler.h  global.cpp  global.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  reftreedelegate.cpp  reftreemodel.cpp  reftreemodel.h  repocontext.cpp  repocontext.h  resources.qrc
src/dialogs/: branchcommitdialog.ui  branchdialog.cpp  branchdialog.h  branchremotedialog.ui  checkoutdialog.cpp  checkoutdialog.h  checkoutdialog.ui  cleanconfirmdialog.ui  cleandialog.cpp  cleandialog.h  cleandialog.ui  cmddialog.cpp  cmddialog.h  cmddialog.ui  deletelocalbranchdialog.ui  deleterefdialog.cpp  deleterefdialog.h  deletetagdialog.ui  deletremotebranchdialog.ui  fetchdialog.cpp  fetchdialog.h  fetchdialog.ui  pulldialog.cpp  pulldialog.h  pulldialog.ui  pushdialog.cpp  pushdialog.h  pushdialog.ui  repoinitdialog.cpp  repoinitdialog.h  repoinitdialog.ui  reposyncdialog.cpp  reposyncdialog.h  reposyncdialog.ui  resetdialog.cpp  resetdialog.h  resetdialog.ui  switchmanifestdialog.cpp  switchmanifestdialog.h  switchmanifestdialog.ui  (+4 more)
src/pages/: changespage.cpp  changespage.h  changespage.ui  historygraphdelegate.cpp  historygraphdelegate.h  historypage.cpp  historypage.h  historypage.ui  historytablemodel.cpp  historytablemodel.h  newtabpage.cpp  newtabpage.h  newtabpage.ui  pagehost.cpp  pagehost.h  pagehost.ui
src/pty/: Pty.cpp  Pty.h  kprocess.h  kpty.cpp  kpty.h  kptyprocess.cpp  kptyprocess.h  kshell.h  kshell_unix.cpp  ptydisplay.cpp  ptydisplay.h
src/themes/: dark.theme  icon.cpp  icon.h  light.theme  repomanstyle.cpp  repomanstyle.h  theme.cpp  theme.h  theme_p.h
src/widgets/: QProgressIndicator.cpp  QProgressIndicator.h  commitdetailscrollarea.cpp  commitdetailscrollarea.h  diffscrollarea.cpp  diffscrollarea.h  difftextedit.cpp  difftextedit.h  diffutils.cpp  diffutils.h  diffview.cpp  diffview.h  diffview.ui  pathfinderview.cpp  pathfinderview.h  qhistorytableview.cpp  qhistorytableview.h  reftreedelegate.cpp  reftreedelegate.h  reftreemodel.cpp  reftreeview.cpp  reftreeview.h  tabwidgetex.cpp  tabwidgetex.h
